Fix z-index for starlight tabs line

--- a/packages/studiocms_ui/src/components/Tabs/tabs.css
+++ b/packages/studiocms_ui/src/components/Tabs/tabs.css
@@ -121,7 +121,7 @@
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	z-index: 15;
+	z-index: 1;
 }
 
 .sui-tabs-container.starlight .sui-tab-header:focus-visible::after {
